--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "blog"
-title: "My visual analytics journey"
+title: "My visual journey"
 description: |
   Visual Analytics Blog
 output_dir: "_site"
