--- a/_site.yml
+++ b/_site.yml
@@ -13,6 +13,6 @@ navbar:
     - text: "Home"
       href: index.html
     - text: "About"
-      href: abt.html
+      href: about.html
 
 output: distill::distill_article
